<resources>
    <string name="app_name">InventoryApp</string>
    <string name="empty_view_title_text">Your list is empty…</string>
    <string name="empty_view_subtitle_text">Press the button to add a product. \nRequired fields are product name, quantity and supplier details.</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="product">Product</string>
    <string name="hint_name">Name</string>
    <string name="hint_price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="hint_phone">Phone</string>
    <string name="delete">Delete</string>
    <string name="hint_quantity">0</string>
    <string name="delete_button">Delete outline white trashcan</string>
    <string name="phone_button">White phone button</string>
    <string name="right_arrow_button">White right arrow button</string>
    <string name="left_arrow_button">White left arrow button</string>
    <string name="sad_app_image">Sad app image</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="action_save">Save</string>
    <string name="editor_insert_product_failed">Error while saving</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_update_product_failed">Error while updating</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error while deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="cancel">Cancel</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Entries</string>
    <string name="price_not_specified">Price not specified</string>
    <string name="call_not_permitted">Permission to call not granted</string>
    <string name="sale_successful">Product sold!</string>
    <string name="sale_failed">Out of stock!</string>
    <string name="valid_name">Product requires a name</string>
    <string name="valid_supplier">Supplier requires valid name</string>
    <string name="valid_phone">Product requires valid phone</string>
    <string name="sale">SALE</string>
    <string name="permission_explanation">This permission is needed to call the supplier</string>
</resources>
