<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_name"
                android:inputType="textCapWords" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_price"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/quantity" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <!-- Quantity increment-decrement -->
            <ImageButton
                android:id="@+id/decrement"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/left_arrow_button"
                android:src="@drawable/baseline_keyboard_arrow_left_white_18" />

            <EditText
                android:id="@+id/edit_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                android:paddingBottom="16dp" />

            <ImageButton
                android:id="@+id/increment"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/right_arrow_button"
                android:src="@drawable/baseline_keyboard_arrow_right_white_18" />
        </LinearLayout>
    </LinearLayout>
    <!-- Category Supplier -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">
            <!--Supplier name field-->
            <EditText
                android:id="@+id/supplier_name"
                style="@style/EditorFieldStyle"
                android:inputType="text"
                android:hint="@string/hint_name"/>
            <!-- Phone field -->
            <EditText
                android:id="@+id/edit_phone"
                android:layout_below="@id/supplier_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="text" />

            <!-- Call button -->
            <ImageButton
                android:id="@+id/call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_below="@id/supplier_name"
                android:layout_toEndOf="@id/edit_phone"
                android:layout_toRightOf="@id/edit_phone"
                android:background="@drawable/button_background"
                android:contentDescription="@string/phone_button"
                android:padding="6dp"
                android:src="@drawable/call_button" />
        </RelativeLayout>
    </LinearLayout>
    <!-- Delete category -->
    <LinearLayout
        android:id="@+id/container_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:id="@+id/delete_label"
            android:text="@string/delete" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/delete_button"
            android:padding="6dp"
            android:src="@drawable/button" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>